# D-Tech

./: .env.example  .gitignore  README.md  config.py  interview.py  interview_cli.py  llm.py  main.py  pyproject.toml
app/: main.py
app/core/: exceptions.py
app/core/llm/: failover.py
app/services/: interview.py
features/interview/: constants.py
features/interview/domain/: enums.py  exceptions.py  llm_port.py  model.py  repository.py  service.py
features/interview/infrastructure/: memory_repository.py
features/interview/interfaces/http/: router.py  schemas.py
features/janis/interfaces/http/: router.py
features/mindy/interfaces/http/: router.py
infrastructure/llm/: factory.py  failover.py  port.py
infrastructure/llm/providers/: claude.py  gemini.py  openai.py
tests/: test_interview_service.py  test_repository.py  test_service.py
