[project]
name = "dtech"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.133.1",
    "uvicorn>=0.41.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "questionary>=2.0.0",
]
